--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@ crashlytics-build.properties
 fmod_editor.log
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 fmod_editor.log
+*.log
+*.log
+*.log
