--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.animation.rigging": "1.2.1",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.4",
+    "com.unity.feature.2d": "1.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.formats.fbx": "4.2.1",
     "com.unity.inputsystem": "1.6.3",
