--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.formats.fbx": "4.2.1",
     "com.unity.inputsystem": "1.6.3",
     "com.unity.polybrush": "1.1.6",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.recorder": "4.0.2",
     "com.unity.render-pipelines.core": "14.0.8",
     "com.unity.render-pipelines.universal": "14.0.8",
