--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.recorder": "4.0.2",
     "com.unity.render-pipelines.core": "14.0.8",
     "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.terrain-tools": "5.0.4",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
